fix issues: 1. no padding top; 2.reporter hover is too narrow; 3. activities display

--- a/src/components/BoardCard/CardRightContent/CardRightContent.module.scss
+++ b/src/components/BoardCard/CardRightContent/CardRightContent.module.scss
@@ -185,6 +185,7 @@ $padding-left: 10px;
             font-weight: bolder;
             color: #5e6c84;
             padding-left: 20px;
+            padding-top: 12px;
           }
           .typeListOption {
             display: flex;
